objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Here is address of employee</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comapany_Name__c</fullName>
        <description>here is company name of employee in which he already worked</description>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_No_of_Year__c</fullName>
        <description>here is number of years employee had</description>
        <label>Experience No of Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leaving_Date__c</fullName>
        <description>Here is the date on which employee leaved the company</description>
        <label>Leaving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <description>Here is mobile no d employee</description>
        <label>Mobile No</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>it is name of Employee</description>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <description>here is pin code of employee&apos;s place</description>
        <label>Pin Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>position of employee in old company</description>
        <label>Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <description>Here is qualification details</description>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Btech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Univercity__c</fullName>
        <description>here are some univercities given</description>
        <label>Univercity</label>
        <picklist>
            <picklistValues>
                <fullName>Savitribai Phule Univercity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maratha Univercity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagpur Univercity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mubai Univercity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMU Univercity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amaravati Univercity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X10th_Year_Of_passing__c</fullName>
        <description>here is year of passing for 10 th class</description>
        <label>10th Year Of passing</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12th_year_of_passing__c</fullName>
        <label>12th year of passing</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Experience</fullName>
        <active>true</active>
        <description>It is the table of experienced people</description>
        <label>Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <description>It is the table of Fresher people</description>
        <label>Fresher</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>